# convodocs-proto

./: .gitignore  README.md  package.json  pnpm-lock.yaml
app/: ThemeRegistry.tsx  layout.tsx  page.tsx
app/document/[id]/: page.tsx
app/teams/: page.tsx
backend/: README.md  main.py  pyproject.toml  requirements.txt
frontend/: README.md
frontend/src/: App.tsx  theme.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  DocumentEditor.tsx  TeamManagement.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
